--- a/.air.toml
+++ b/.air.toml
@@ -5,16 +5,16 @@ tmp_dir = "tmp"
 [build]
   args_bin = []
   bin = "./tmp/main"
-  cmd = "go build -o ./tmp/main ."
+  cmd = "npm --prefix ./client run build && go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["client","assets", "tmp", "vendor", "testdata"]
+  exclude_dir = ["client/build", "client/node_modules", "assets", "tmp", "vendor", "testdata"]
   exclude_file = []
   exclude_regex = ["_test.go"]
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = ["client/build"]
-  include_ext = ["go", "tpl", "tmpl", "html"]
+  include_dir = []
+  include_ext = ["go", "tpl", "tmpl", "html", "tsx"]
   include_file = []
   kill_delay = "0s"
   log = "build-errors.log"
